objects/GeoTab_Setting__mdt.object
<CustomObject>
    <description>Settings for Specific GeoTab Methods and Transactions</description>
    <fields>
        <fullName>Error_Email_Addresses__c</fullName>
        <description>Comma delimited list of email addys to send errors too. If this is populated. this will tell the system to send emails upon any error regardless of other logging settings.</description>
        <inlineHelpText>Comma delimited list of email addys to send errors too. If this is populated. this will tell the system to send emails upon any error regardless of other logging settings.</inlineHelpText>
        <label>Error Email Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Callout_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Log the Http Request Body of the Callout. In The Svc classes this will be in the form of a System.debug log. In the queueable classes. this will be in the form of an Accel_Application_Error__c log after the callout has been executed.</description>
        <inlineHelpText>Log the Http Request Body of the Callout. In The Svc classes this will be in the form of a System.debug log. In the queueable classes. this will be in the form of an Accel_Application_Error__c log after the callout has been executed.</inlineHelpText>
        <label>Log Callout Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Log_Callout_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Log Http Response Body. In The Svc classes this will be in the form of a System.debug log. In the queueable classes. this will be in the form of an Accel_Appliction_Error__c log after the callout has been executed. Be careful as depending on the call. this response could exceed the limit of the field size.</description>
        <inlineHelpText>Log Http Response Body. In The Svc classes this will be in the form of a System.debug log. In the queueable classes. this will be in the form of an Accel_Appliction_Error__c log after the callout has been executed.Be careful as depending on the call. this response could exceed the limit of the field size.</inlineHelpText>
        <label>Log Callout Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Log_Http_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Log Http Errors and or status codes other than 200. Generally should be kept on.</description>
        <inlineHelpText>Log Http Errors and or status codes other than 200. Generally should be kept on.</inlineHelpText>
        <label>Log Http Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Log_Vendor_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Log any errors returned by the Vendor in the response (Might still have a 200 Http Status Code but have an error from the vendor)</description>
        <inlineHelpText>Log any errors returned by the Vendor in the response (Might still have a 200 Http Status Code but have an error from the vendor)</inlineHelpText>
        <label>Log Vendor Error</label>
        <type>Checkbox</type>
    </fields>
    <label>GeoTab Setting</label>
    <listViews>
        <fullName>All_GeoTab_Settings</fullName>
        <columns>MasterLabel</columns>
        <columns>Log_Callout_Request__c</columns>
        <columns>Log_Callout_Response__c</columns>
        <columns>Error_Email_Addresses__c</columns>
        <columns>Log_Http_Error__c</columns>
        <columns>Log_Vendor_Error__c</columns>
        <filterScope>Everything</filterScope>
        <label>All GeoTab Settings</label>
    </listViews>
    <pluralLabel>GeoTab Settings</pluralLabel>
</CustomObject>